src/css/style.css
.overlay-div {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index:999;
}



.my-tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
}
.tooltiptext {
    font-size: 8px;
    visibility: hidden;
    width: 50px;
    background-color: #444444;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    z-index: 2;
    position: absolute;
    cursor: pointer;
}
.tooltiptext.top{
  /* Position the tooltip */
  /* margin-left determin position : center =>width/2 */
  bottom: 100%;
  left: 50%;
  margin-left: -25px;
}
.tooltiptext.right{
  bottom: 100%;
  left: 50%;
  margin-left: 0px;
}
.tooltiptext.bottom-right{
  bottom: -200%;
  left: 50%;
  margin-left: 0px;
}
.tooltiptext.left{
  bottom: 100%;
  left: 50%;
  margin-left: -50px;
}
.tooltiptext.bottom-left{
  bottom: -200%;
  left: 50%;
  margin-left: -50px;
}
.my-tooltip:hover .tooltiptext {
    visibility: visible;
}
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: unset;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: black;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #b30000;
}


#navbar {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
  position: relative;
  top: 0;
  width: 100%;
  /* z-index: 150; */
}
#navbar > li {
  float: left;
}
li > a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-family: 'sans-serif';
  font-weight: bold;
}
li a:hover:not(.active) {
  background-color: #111;
}
.active {
  background-color: #e5e5e5;
}
menu > a {
  display: block;
  color: #28A745 !important;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-family: 'sans-serif';
  font-weight: bold;
  font-size: 20px;
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.div-inline{
  display: inline-flex;
  margin: 0 auto;
}
.display-grid{
  display: grid;
}
.display-error{
  height:85vh;
}
.display-title{
  height: 156px;
  white-space: nowrap;
}
.display-logo{
  width: 75%;
  display: inline-block;
  text-align: center;
  padding-left: 28%;
}
.display-button{
  display: inline-block;
  padding-left: 10%;
}
.display-grid-blank-20{
  display: grid;
  height: 20px !important;
}
.display-grid-blank-40{
  display: grid;
  height: 40px !important;
}
.display-grid-blank-60{
  display: grid;
  height: 60px !important;
}
.display-list{
  display: contents;
}
.display-col-list{
  display: flex;
}
.list-overflow{
  overflow-x: hidden !important;
  overflow-y: hidden !important;
}
.background-fusion{
  background: black !important;
}
.background-Mobile {
  background: black !important;
}
.div-left{
  float:left;
}
.div-right{
  float: right;
}
.bottom-footer{
  position: fixed;
  bottom:0;
  width:100%;
  z-index: 1020;
  background-color: #000000;
}
#designedBy > a{
  font-family: sans-serif;
  font-size: 100%;
  color: #FFFFFF;
}

.slogan-h1{
  font-size: 70px;
  color:#24e959;
  font-family: 'sans-serif';
}
.slogan-h2{
  color:#ffffff;
  font-family: 'sans-serif';
  margin-top:15px;
}
.logo-size{
  width: 480px;
  margin: 25px auto 0px auto;
}
.logo-size-header{
  width: 30px;
}



.square{
  width: 10px;
  height: 10px;
  background: white;
  transition: transform .2s;
  margin: 0 0;
  border:solid 0.2px black !important;
  display: inline-block;
}
.square:hover {
  transform: scale(2.0);
  z-index: 3;/* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
}



.button-fixed{
  position: absolute;
  bottom: -35px;
  right: 4%;
  background-color: #24e959; /* Green */
  border: none;
  color: #ffffff;
  padding: 1% 1%;
  text-align: center;
  text-decoration: none;
  font-weight: 900;
  font-family: 'sans-serif';
  cursor: pointer;
  vertical-align: text-bottom;
  border-radius: 0%;
  box-shadow: 4px 4px 4px  #158B35;
}
button#btn-buy:hover{
  box-shadow: 0 0;
}
button#btn-buy:active{
  background-color: #19A33E;
  color:#e5e5e5;
}
button#btn-buy:focus {
  outline: none;
  box-shadow: none;
}



.error-page-font{
  font-family: sans-serif;
  color: #000000;
  font-size: 52px;
  font-display: swap;
}
.text-appear {
  animation: blinker 1s linear infinite;
}
@keyframes blinker {
  50% {
    opacity: 0;
  }
}
/* Firefox old*/
@-moz-keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}

@-webkit-keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}
/* IE */
@-ms-keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}
/* Opera and prob css3 final iteration */
@keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}
.blink-image {
    padding-bottom: 1.5%;
    -moz-animation: blink normal 1s infinite ease-in-out; /* Firefox */
    -webkit-animation: blink normal 1s infinite ease-in-out; /* Webkit */
    -ms-animation: blink normal 1s infinite ease-in-out; /* IE */
    animation: blink normal 1s infinite ease-in-out; /* Opera and prob css3 final iteration */
}

/* da usare con overflow-auto e mx-auto */
.div-container-square{
  width: 1520px;
  height: 2808;
  max-width: 100%;
  max-height: 100%;
}
.span-rows-square{
  display: inline-grid;
}
.span-cols-square{
  display: inline-flex;
}
.span-square{
  width: 10px;
  height: 10px;
  background: #FFFFFF;
  transition: transform .2s;
  margin: 0 auto;
  border:solid 0.2px black !important;
  display: inline-block;
}
.span-square:hover {
  transform: scale(2.0);
  z-index: 3;/* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
}

.border-input{
  border:none !important;
  padding: 0 0 0 0;
}
/* ... */

